--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-rte": "^0.16.5"
+    "react-quill": "^1.3.5",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
